--- a/index_vi.html
+++ b/index_vi.html
@@ -117,7 +117,7 @@
                     <div class="col-lg-12">
                         <div class="slider_content text-center">
                             <h5 class="slider_sub_title animated fadeInDown">WE ARE GETTING MARRIED</h5>
-                            <h2 class="slider_title animated fadeInDown">Lý Bá Đông <span>&</span> Thanh Thảo</h2>
+                            <h2 class="slider_title animated fadeInDown">Bá Đông <span>&</span> Thanh Thảo</h2>
                             <span class="location animated fadeInUp">Á Đông RiverSide</span>
                             <p class="animated fadeInUp">
                                 <img src="assets/images/header-shape-1.png" alt="Shape">
