thaodtt: Dieu chinh css

--- a/index_china.html
+++ b/index_china.html
@@ -320,7 +320,7 @@
                         
                         Và rồi một ngày, khi anh khẽ nói:
                         “Làm vợ anh nhé!”
-                        Em đã nguyện ý – đi đâucũng được, miễn là cùng anh.</p>
+                        Em đã nguyện ý – đi đâu cũng được, miễn là cùng anh.</p>
                     </div>
                     <div class="love_date">
                         <p><i class="lni lni-heart-filled"></i> 27 Apr 2024</p>
@@ -715,10 +715,10 @@
                         </div>
                         <div class="event_content">
                             <span class="date">06 Oct 2024</span>
-                            <h3 class="event_title"><a href="#">Proposal Ceremony</a></h3>
-                            <p>Typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when unknown printer took a galley</p>
-                            <a class="more" href="#">Read More...</a>
+                            <h3 class="event_title"><a href="#">Lễ Dạm Ngõ</a></h3>
+                            <p>Đường xa chẳng ngại, nhà trai về Quảng Ngãi mang theo hồi hộp, yêu thương và lời hứa gắn kết hai trái tim bằng một lời dạm ngõ ấm lòng.
+                                Một cuộc gặp gỡ không quá rình rang, nhưng đủ đầy ấm áp.
+                                Từ đây, mọi điều tốt đẹp sẽ bắt đầu — cùng nhau.</p>
                         </div>
                     </div> <!-- single event -->
                 </div>
@@ -729,11 +729,11 @@
                         </div>
                         <div class="event_content">
                             <span class="date">21 Nov 2025</span>
-                            <h3 class="event_title"><a href="#">Bride Shower</a></h3>
-                            <p>Typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when unknown printer took a galley</p>
-                            <a class="more" href="#">Read More...</a>
-                        </div>
+                            <h3 class="event_title"><a href="#">Lễ Vu Quy</a></h3>
+                            <p>Vu Quy – ngày em chính thức trở thành người đồng hành trọn đời của anh,
+                                Mà còn là ngày em mang theo tất cả yêu thương, dặn dò và cả nước mắt của mẹ cha,
+                                để bắt đầu một chương mới – làm dâu, làm vợ, người giữ lửa cho một mái ấm mới,...</p>
+                            </div>
                     </div> <!-- single event -->
                 </div>
                 <div class="col-lg-4 col-md-7">
@@ -743,10 +743,11 @@
                         </div>
                         <div class="event_content">
                             <span class="date">29 Nov 2025</span>
-                            <h3 class="event_title"><a href="#">Wedding Reception</a></h3>
-                            <p>Typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when unknown printer took a galley</p>
-                            <a class="more" href="#">Read More...</a>
+                            <h3 class="event_title"><a href="#">Lễ Thành Hôn</a></h3>
+                            <p>Lễ Thành Hôn – ngày hai chúng mình chính thức về chung một nhà,
+                                không chỉ để xây dựng tổ ấm mà còn để sẻ chia mọi niềm vui, thử thách trong cuộc sống.
+                                Từ hôm nay, ta sẽ cùng nhau cười nhiều hơn, yêu thương nhiều hơn,
+                                và cùng nắm tay đi qua mọi cung bậc của cuộc đời.</p>                           
                         </div>
                     </div> <!-- single event -->
                 </div>
@@ -756,7 +757,7 @@
 
     <!--====== EVENT PART ENDS ======-->
     <!--====== TESTIMONIAL ======-->
-    <section id="testimonial" class="testimonial_area pt-120 pb-130">
+    <section id="testimonial" class="testimonial_area pt-120 pb-130" style="display:none">
         <div class="testimonial_shape_1">
             <img src="assets/images/shape-1.png" alt="shape">
         </div>
@@ -822,8 +823,7 @@
     <!--====== END TESTIMONIAL ======-->
     <!--====== CONTACT PART START ======-->
 
-
-    <section id="contact" class="contact_area pt-130 pb-130">
+    <section id="contact" class="contact_area pt-130 pb-130" style="display:none">
         <div class="container">
             <div class="contact_wrapper wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.4s">
                 <div class="row justify-content-center">
@@ -874,9 +874,7 @@
             </div>
         </div>
     </section>
-
     <!--====== CONTACT PART ENDS ======-->
-
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer_area">
@@ -890,7 +888,7 @@
                     <a href="#"><img src="assets/images/logo-2.png" alt="logo"></a>
                 </div>
                 <div class="footer_title">
-                    <h3 class="title">Bá Đông <span>&</span> Thanh Thảo</h3>
+                    <h3 class="title">Bá Đông <span> & </span> Thanh Thảo</h3>
                 </div>
                 <ul class="footer_menu">
                     <li><a href="#">Home</a></li>
@@ -902,8 +900,12 @@
                 </ul>
             </div> <!-- footer content -->
             <div class="footer_copyright text-center">
-                <p>Designed and Developed by <a href="https://uideck.com" style="color: #D59A57"
-                        rel="nofollow">UIdeck</a></p>
+                <p>Designed and Developed by <a href="https://www.facebook.com/donglb97" style="color: #D59A57"
+                        rel="nofollow">Bá Đông </a>
+                        <span> & </span>
+                        <a href="https://www.facebook.com/thaodtt97/" style="color: #D59A57"
+                        rel="nofollow">Thanh Thảo</a>
+                </p>
             </div>
         </div> <!-- container -->
     </footer>
