--- a/index_vi.html
+++ b/index_vi.html
@@ -715,10 +715,10 @@
                         </div>
                         <div class="event_content">
                             <span class="date">06 Oct 2024</span>
-                            <h3 class="event_title"><a href="#">Proposal Ceremony</a></h3>
-                            <p>Typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when unknown printer took a galley</p>
-                            <a class="more" href="#">Read More...</a>
+                            <h3 class="event_title"><a href="#">Lễ Dạm Ngõ</a></h3>
+                            <p>Đường xa chẳng ngại, nhà trai về Quảng Ngãi mang theo hồi hộp, yêu thương và lời hứa gắn kết hai trái tim bằng một lời dạm ngõ ấm lòng.
+                                Một cuộc gặp gỡ không quá rình rang, nhưng đủ đầy ấm áp.
+                                Từ đây, mọi điều tốt đẹp sẽ bắt đầu — cùng nhau.</p>
                         </div>
                     </div> <!-- single event -->
                 </div>
