thaodtt; dieu chinh code ngay 26072025

--- a/index_china.html
+++ b/index_china.html
@@ -69,25 +69,22 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a class="page-scroll" data-id="home">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#couple">Couple</a>
+                                        <a class="page-scroll" data-id="couple">Couple</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#our_love">Story</a>
+                                        <a class="page-scroll" data-id="our_love">Story</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#gallery">Gallery</a>
+                                        <a class="page-scroll" data-id="gallery">Gallery</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#event">Event</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="page-scroll" href="#contact">RSVP</a>
+                                        <a class="page-scroll" data-id="event">Event</a>
                                     </li>
                                     <li class="nav-item buttons-language">
-                                        <a class="page-scroll changelang" id="btnLanguage" data-languageid="2052"></a>                                        
+                                        <a class="page-scroll changelang lang-vn" id="btnLanguage" data-languageid="2051"></a>                                        
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
