--- a/index_vi.html
+++ b/index_vi.html
@@ -388,29 +388,29 @@
             <div class="gallery-container gallery-fancybox masonry-gallery">
                 <script type="text/javascript">
                     photoGalleries.push({
-                        src: "/assets/images/Gallery/20250529_084123280_iOS.jpg",
-                        thumb: "/assets/images/Gallery/20250529_084123280_iOS.jpg",
+                        src: "assets/images/Gallery/20250529_084123280_iOS.jpg",
+                        thumb: "assets/images/Gallery/20250529_084123280_iOS.jpg",
                         subHtml: `<div class="lg-sub-html"><h4></h4></div>`
                     });
                 </script>
 
                 <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="0">
                     <a href="javascript:void(0)">
-                        <img src="/assets/images/Gallery/20250529_084123280_iOS.jpg"
+                        <img src="assets/images/Gallery/20250529_084123280_iOS.jpg"
                             alt class="img img-responsive">
                     </a>
                 </div>
                 <script type="text/javascript">
                     photoGalleries.push({
-                        src: "/assets/images/Gallery/20250612_225056700_iOS.jpg",
-                        thumb: "/assets/images/Gallery/20250612_225056700_iOS.jpg",
+                        src: "assets/images/Gallery/20250612_225056700_iOS.jpg",
+                        thumb: "assets/images/Gallery/20250612_225056700_iOS.jpg",
                         subHtml: `<div class="lg-sub-html"><h4></h4></div>`
                     });
                 </script>
 
                 <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="1">
                     <a href="javascript:void(0)">
-                        <img src="/assets/images/Gallery/20250612_225056700_iOS.jpg"
+                        <img src="assets/images/Gallery/20250612_225056700_iOS.jpg"
                             alt class="img img-responsive">
                     </a>
                 </div>
@@ -949,7 +949,7 @@
             </span>
         </div>
     </div>
-    <audio style="display: none;" id="audio-music" src="../assets/music/wedding.mp3"></audio>
+    <audio style="display: none;" id="audio-music" src="assets/music/wedding.mp3"></audio>
 
     <!--====== player ENDS ======-->
 
