--- a/index_vi.html
+++ b/index_vi.html
@@ -384,7 +384,7 @@
                 </div>
             </div>
         </div>  
-        <div class="container gallery_wrapper">
+        <div class="container gallery_wrapper" >
             <div class="gallery-container gallery-fancybox masonry-gallery">
                 <script type="text/javascript">
                     photoGalleries.push({
@@ -414,166 +414,7 @@
                             alt class="img img-responsive">
                     </a>
                 </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540874e17cffb47028ff7/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540874e17cffb47028ff7/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="2">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540874e17cffb47028ff7/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540f7f7d37baf58000637/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540f7f7d37baf58000637/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="3">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540f7f7d37baf58000637/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54051f7d37baf58000636/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54051f7d37baf58000636/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="4">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54051f7d37baf58000636/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54d5615db60497d08242a/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54d5615db60497d08242a/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="5">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54d5615db60497d08242a/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5410ca06a739db70282ea/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5410ca06a739db70282ea/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="6">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5410ca06a739db70282ea/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5409868c640fce5063b9c/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5409868c640fce5063b9c/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="7">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5409868c640fce5063b9c/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540a04e17cffb47028ff8/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540a04e17cffb47028ff8/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="8">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540a04e17cffb47028ff8/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540ac29ee14a34701124e/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540ac29ee14a34701124e/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <div class="grid grid-item btn-see-more-gallery wow pulse" data-index="9">
-                    <a href="javascript:void(0)">
-                        <img src="https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540ac29ee14a34701124e/small.jpg"
-                            alt class="img img-responsive">
-                    </a>
-                </div>
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54119f7d37baf58000638/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f54119f7d37baf58000638/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5412c1864a98666013406/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f5412c1864a98666013406/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540c5ccd5dadd6b021d57/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540c5ccd5dadd6b021d57/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540b454016df65e073aa8/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540b454016df65e073aa8/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540ea328674b35c04903b/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540ea328674b35c04903b/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
-                <script type="text/javascript">
-                    photoGalleries.push({
-                        src: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540fea06a739db70282e9/large.jpg",
-                        thumb: "https://cdn.biihappy.com/ziiweb/website/65f41f41ee81007c740076aa/galleries/65f540fea06a739db70282e9/small.jpg",
-                        subHtml: `<div class="lg-sub-html"><h4></h4></div>`
-                    });
-                </script>
-
+                
             </div>
         </div>
 
@@ -754,7 +595,7 @@
 
     <!--====== EVENT PART ENDS ======-->
     <!--====== TESTIMONIAL ======-->
-    <section id="testimonial" class="testimonial_area pt-120 pb-130">
+    <section id="testimonial" class="testimonial_area pt-120 pb-130" style="display: none;">
         <div class="testimonial_shape_1">
             <img src="assets/images/shape-1.png" alt="shape">
         </div>
@@ -821,7 +662,7 @@
     <!--====== CONTACT PART START ======-->
 
 
-    <section id="contact" class="contact_area pt-130 pb-130">
+    <section id="contact" class="contact_area pt-130 pb-130" style="display: none;">
         <div class="container">
             <div class="contact_wrapper wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.4s">
                 <div class="row justify-content-center">
