bo sung lai trang chon ngon ngu ngay16092025

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                         <a class="page-scroll" data-id="event">Event</a>
                                     </li>
                                     <li class="nav-item buttons-language">
-                                        <a class="page-scroll changelang" id="btnLanguage" data-languageid="2052"></a>
+                                        <a class="page-scroll changelang" id="btnLanguage" data-languageid="1066"></a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -768,12 +768,11 @@
                     <h3 class="title">Bá Đông <span>&</span> Thanh Thảo</h3>
                 </div>
                 <ul class="footer_menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Story</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Event</a></li>
-                    <li><a href="#">RSVP</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#couple">Couple</a></li>
+                    <li><a href="#our_love">Story</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#event">Event</a></li>
                 </ul>
             </div> <!-- footer content -->
             <div class="footer_copyright text-center">
