--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!--====== Bootstrap CSS ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
+    <!--====== BookBlock CSS ======-->
+    <link rel="stylesheet" href="assets/css/bookblock.css">
+
     <!--====== Default CSS ======-->
     <link rel="stylesheet" href="assets/css/default.css">
 
@@ -429,6 +432,7 @@
     </section>
 
     <!--====== GALLERY PART ENDS ======-->
+
     <!--====== GALLERY PART START ======-->
 
     <section id="gallery" class="gallery_area event-section section-padding pt-120">
@@ -446,7 +450,7 @@
         <div class="gallery_wrapper">
             <div class="container-fluid">
                 <div class="row no-gutters">
-                    
+
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
@@ -468,7 +472,8 @@
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
-                                    <li><a class="image-popup" href="assets/images/Gallery/Dream/20250613_002704190_iOS.webp"><i
+                                    <li><a class="image-popup"
+                                            href="assets/images/Gallery/Dream/20250613_002704190_iOS.webp"><i
                                                 class="lni lni-zoom-in"></i></a></li>
                                 </ul>
                             </div>
@@ -481,7 +486,8 @@
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
-                                    <li><a class="image-popup" href="assets/images/Gallery/Dream/20250613_012910430_iOS.webp"><i
+                                    <li><a class="image-popup"
+                                            href="assets/images/Gallery/Dream/20250613_012910430_iOS.webp"><i
                                                 class="lni lni-zoom-in"></i></a></li>
                                 </ul>
                             </div>
@@ -494,7 +500,8 @@
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
-                                    <li><a class="image-popup" href="assets/images/Gallery/Studio/20250622_025831460_iOS.webp"><i
+                                    <li><a class="image-popup"
+                                            href="assets/images/Gallery/Studio/20250622_025831460_iOS.webp"><i
                                                 class="lni lni-zoom-in"></i></a></li>
                                 </ul>
                             </div>
@@ -503,12 +510,14 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery" style="object-position: top;">
+                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery"
+                                    style="object-position: top;">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
                                     <li>
-                                        <a class="image-popup" href="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp">
+                                        <a class="image-popup"
+                                            href="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp">
                                             <i class="lni lni-zoom-in"></i>
                                         </a>
                                     </li>
@@ -523,7 +532,8 @@
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
-                                    <li><a class="image-popup" href="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp"><i
+                                    <li><a class="image-popup"
+                                            href="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp"><i
                                                 class="lni lni-zoom-in"></i></a></li>
                                 </ul>
                             </div>
@@ -532,11 +542,13 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery" style="object-position: top;">
+                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery"
+                                    style="object-position: top;">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
-                                    <li><a class="image-popup" href="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp"><i
+                                    <li><a class="image-popup"
+                                            href="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp"><i
                                                 class="lni lni-zoom-in"></i></a></li>
                                 </ul>
                             </div>
@@ -566,6 +578,100 @@
     </section>
 
     <!--====== GALLERY PART ENDS ======-->
+
+    <!--====== ABLUM PART START ======-->
+
+    <section id="gallery" class="gallery_area event-section section-padding pt-120">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section_title text-center pb-30">
+                        <h3 class="title">Love Album</h3>
+                        <img src="assets/images/section_shape.png" alt="Shape">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="ablum_wrapper">
+            <div class="box-content-ablum">
+                <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                    <a id="ablum1" class="ablum-popup">
+                        <div class="box-text-ablum">
+                            <h3>Dream 1</h3>
+                            <p>Khát Vọng</p>
+                        </div>
+                        <div class="box-ablum-image">
+                            <img src="assets/images/album-1.png" alt="ablum">
+                            <span class="book-open-icon">
+                                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+                                </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div id="popup-ablum1" class="popup-ablum mfp-hide">
+                    <div class="main clearfix">
+                        <div class="bb-custom-wrapper">
+                            <div id="bb-bookblock_1" class="bb-bookblock">
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image01" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-2.png" alt="image02" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image03" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-2.png" alt="image04" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image05" /></a>
+                                </div>
+                            </div>
+                            <nav>
+                                <a id="bb-nav-first_1" href="#" class="bb-custom-icon bb-custom-icon-first">First page</a>
+                                <a id="bb-nav-prev_1" href="#" class="bb-custom-icon bb-custom-icon-arrow-left">Previous</a>
+                                <a id="bb-nav-next_1" href="#" class="bb-custom-icon bb-custom-icon-arrow-right">Next</a>
+                                <a id="bb-nav-last_1" href="#" class="bb-custom-icon bb-custom-icon-last">Last page</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                    <a id="ablum2" class="ablum-popup">
+                        <div class="box-text-ablum">
+                            <h3>Dream 2</h3>
+                            <p>Khát Vọng</p>
+                        </div>
+                        <div class="box-ablum-image">
+                            <img src="assets/images/album-2.png" alt="ablum">
+                            <span class="book-open-icon">
+                                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+                                </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div id="popup-ablum2" class="popup-ablum mfp-hide">
+                    <h2>Dream 1 - Khát Vọng</h2>
+                    <img src="assets/images/album-2.png" alt="ablum" style="max-width:100%;border-radius:12px;">
+                    <p>Mô tả hoặc nội dung chi tiết album 2 ở đây...</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--====== ABLUM PART ENDS ======-->
 
     <!--====== EVENT PART START ======-->
 
@@ -832,7 +938,6 @@
 
 
 
-
     <!--====== Jquery js ======-->
     <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="assets/js/vendor/modernizr-3.7.1.min.js"></script>
@@ -863,6 +968,11 @@
 
     <!--====== wow js ======-->
     <script src="https://cdn.jsdelivr.net/npm/@panzoom/panzoom@4.6.0/dist/panzoom.min.js"></script>
+
+    <!--====== Book js ======-->
+    <script src="assets/js/modernizr.custom.js"></script>
+    <script src="assets/js/jquerypp.custom.js"></script>
+    <script src="assets/js/jquery.bookblock.min.js"></script>
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
