chinh css ngay17092025

--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
                 <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
                     <a id="ablum1" class="ablum-popup">
                         <div class="box-text-ablum">
-                            <h3>Dream 1</h3>
-                            <p>Khát Vọng</p>
+                            <h3>Lãng mạn – Ngọt ngào</h3>
+                            <p>“Bắt đầu một hành trình trọn đời bên nhau.”</p>
                         </div>
                         <div class="box-ablum-image">
                             <img src="assets/images/album-1.png" alt="ablum">
@@ -646,8 +646,8 @@
                 <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
                     <a id="ablum2" class="ablum-popup">
                         <div class="box-text-ablum">
-                            <h3>Dream 2</h3>
-                            <p>Khát Vọng</p>
+                            <h3>Lãng mạn - Truyền thống</h3>
+                            <p>“Trong sắc đỏ, tình yêu thắm mãi.”</p>
                         </div>
                         <div class="box-ablum-image">
                             <img src="assets/images/album-2.png" alt="ablum">
