--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                                         <a class="page-scroll" data-id="gallery">Gallery</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="page-scroll" data-id="ablum">Album</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="page-scroll" data-id="event">Event</a>
                                     </li>
                                     <li class="nav-item buttons-language">
@@ -581,7 +584,7 @@
 
     <!--====== ABLUM PART START ======-->
 
-    <section id="gallery" class="gallery_area event-section section-padding pt-120">
+    <section id="ablum" class="ablum_area event-section section-padding pt-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -594,22 +597,17 @@
         </div>
 
         <div class="ablum_wrapper">
-            <div class="box-content-ablum">
-                <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
+            <div class="box-content-ablum row">
+                <div class="box-ablum col-lg-6 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
                     <a id="ablum1" class="ablum-popup">
                         <div class="box-text-ablum">
                             <h3>Lãng mạn – Ngọt ngào</h3>
                             <p>“Bắt đầu một hành trình trọn đời bên nhau.”</p>
                         </div>
-                        <div class="box-ablum-image">
-                            <img src="assets/images/album-1.png" alt="ablum">
-                            <span class="book-open-icon">
-                                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-                                </svg>
-                            </span>
+                        <div class="box-ablum-image-container">
+                            <div class="box-ablum-image wow shakeX" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                                <img src="assets/images/album-1.png" alt="ablum">
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -634,37 +632,62 @@
                                 </div>
                             </div>
                             <nav>
-                                <a id="bb-nav-first_1" href="#" class="bb-custom-icon bb-custom-icon-first">First page</a>
-                                <a id="bb-nav-prev_1" href="#" class="bb-custom-icon bb-custom-icon-arrow-left">Previous</a>
-                                <a id="bb-nav-next_1" href="#" class="bb-custom-icon bb-custom-icon-arrow-right">Next</a>
+                                <a id="bb-nav-first_1" href="#" class="bb-custom-icon bb-custom-icon-first">First
+                                    page</a>
+                                <a id="bb-nav-prev_1" href="#"
+                                    class="bb-custom-icon bb-custom-icon-arrow-left">Previous</a>
+                                <a id="bb-nav-next_1" href="#"
+                                    class="bb-custom-icon bb-custom-icon-arrow-right">Next</a>
                                 <a id="bb-nav-last_1" href="#" class="bb-custom-icon bb-custom-icon-last">Last page</a>
                             </nav>
                         </div>
                     </div>
                 </div>
 
-                <div class="box-ablum wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                <div class="box-ablum col-lg-6 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
                     <a id="ablum2" class="ablum-popup">
                         <div class="box-text-ablum">
                             <h3>Lãng mạn - Truyền thống</h3>
                             <p>“Trong sắc đỏ, tình yêu thắm mãi.”</p>
                         </div>
-                        <div class="box-ablum-image">
-                            <img src="assets/images/album-2.png" alt="ablum">
-                            <span class="book-open-icon">
-                                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-                                </svg>
-                            </span>
+                        <div class="box-ablum-image-container">
+                            <div class="box-ablum-image box-ablum-image-2 wow shakeX" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                                <img src="assets/images/album-2.png" alt="ablum">
+                            </div>
                         </div>
                     </a>
                 </div>
                 <div id="popup-ablum2" class="popup-ablum mfp-hide">
-                    <h2>Dream 1 - Khát Vọng</h2>
-                    <img src="assets/images/album-2.png" alt="ablum" style="max-width:100%;border-radius:12px;">
-                    <p>Mô tả hoặc nội dung chi tiết album 2 ở đây...</p>
+                    <div class="main clearfix">
+                        <div class="bb-custom-wrapper">
+                            <div id="bb-bookblock_2" class="bb-bookblock">
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image01" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-2.png" alt="image02" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image03" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-2.png" alt="image04" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/album-1.png" alt="image05" /></a>
+                                </div>
+                            </div>
+                            <nav>
+                                <a id="bb-nav-first_2" href="#" class="bb-custom-icon bb-custom-icon-first">First
+                                    page</a>
+                                <a id="bb-nav-prev_2" href="#"
+                                    class="bb-custom-icon bb-custom-icon-arrow-left">Previous</a>
+                                <a id="bb-nav-next_2" href="#"
+                                    class="bb-custom-icon bb-custom-icon-arrow-right">Next</a>
+                                <a id="bb-nav-last_2" href="#" class="bb-custom-icon bb-custom-icon-last">Last page</a>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -878,6 +901,7 @@
                     <li><a href="#couple">Couple</a></li>
                     <li><a href="#our_love">Story</a></li>
                     <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#ablum">Ablum</a></li>
                     <li><a href="#event">Event</a></li>
                 </ul>
             </div> <!-- footer content -->
